--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,26 @@
 body {
     margin: 0;
+    text-align: center;
+    font-family: 'Merriweather', serif;;
 }
 
 h1 {
-    
-    
+    margin-top: 0;
+    font-family: 'Sacramento', cursive;   
+}
+
+h2 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+h3 {
+    font-family: 'Montserrat', sans-serif;
 }
 
 .topContainer {
     background-color: #E4F9F5;
+    position: relative;
+    padding-top: 100px;
 }
 
 .middleContainer {
@@ -28,3 +40,17 @@ h1 {
 .pro {
     text-decoration: underline;
 }
+
+.top-cloud {
+    position: absolute;
+    right: 400px;
+    top: 50px;
+}
+
+.bottom-cloud {
+    position: absolute;
+    left: 400px;
+    bottom: 300px;
+    
+}
+
