--- a/css/styles.css
+++ b/css/styles.css
@@ -23,22 +23,14 @@ h3 {
     padding-top: 100px;
 }
 
-.middleContainer {
-    background-color: red;
-
-    height: 200px;
-    width: 200px;
-}
-
-.bottomContainer {
-    background-color: blue;
-
-    height: 200px;
-    width: 200px;
-}
-
 .pro {
     text-decoration: underline;
+}
+
+.happy-coder {
+    width: 20%;
+    border-radius: 20%;
+    background-color: rgba(19, 17, 17, 0.589);
 }
 
 .top-cloud {
