--- a/css/styles.css
+++ b/css/styles.css
@@ -5,15 +5,22 @@ body {
 }
 
 h1 {
-    margin-top: 0;
+    color: #66BFBF;
+    margin: 50 auto 0 auto;
+    font-size: 80px;
     font-family: 'Sacramento', cursive;   
+    line-height: 1;
 }
 
 h2 {
+    color: #66BFBF;
+    font-size: 2.5rem;
     font-family: 'Montserrat', sans-serif;
+    font-weight: normal;
 }
 
 h3 {
+    color: #11999E;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -41,17 +48,28 @@ h3 {
     background-color: rgba(19, 17, 17, 0.589);
 }
 
-.html-skills {
-    background-color: rgba(83, 107, 243, 0.589);
-    width: 20%;
-    border-radius: 10%;
+.skill-row {
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;
+    line-height: 2;
 }
 
 .css-skills {
     background-color: rgba(243, 42, 42, 0.507);
-    height: 307.20px;
-    width: 20%;
+    height: 192px;
+    width: 25%;
     border-radius: 10%;
+    float: left;
+    margin-right: 30px;
+}
+
+.html-skills {
+    background-color: rgba(83, 107, 243, 0.589);
+    width: 25%;
+    border-radius: 10%;
+    float: right;
+    margin-left: 30px;
 }
 
 .top-cloud {
@@ -67,3 +85,6 @@ h3 {
     
 }
 
+.footer-link {
+    color: #11999E;
+}
